--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -65,5 +65,6 @@ jobs:
           name: python-package-distributions
           path: dist/
 
-      - name: Publish release distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+      - name: pypi-publish
+        uses: pypa/gh-action-pypi-publish@v1.12.3
+            
