--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -50,7 +50,7 @@ jobs:
       Publish LiveApex to PyPI
     needs:
     - release-build
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     environment:
       name: pypi
       url: https://test.pypi.org/p/liveapex
