--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -15,6 +15,7 @@ on:
 
 permissions:
   contents: read
+  id-token: write
 
 jobs:
   release-build:
@@ -67,4 +68,7 @@ jobs:
 
       - name: pypi-publish
         uses: pypa/gh-action-pypi-publish@v1.12.3
+        with:
+          user: __token__
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
             
