--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -71,4 +71,5 @@ jobs:
         with:
           user: __token__
           password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          verbose: true
             
