Correct to test PyPI

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -54,7 +54,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://test.pypi.org/p/liveapex
+      url: https://test.pypi.org/legacy/
     permissions:
       # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
