--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -69,5 +69,6 @@ jobs:
       - name: pypi-publish
         uses: pypa/gh-action-pypi-publish@v1.12.3
         with:
+          repository_url: https://test.pypi.org/legacy/
           user: __token__
           password: ${{ secrets.TEST_PYPI_API_TOKEN }}
