--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,6 +22,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Check commit message for version tag
+        id: check_version
+        run: |
+          if [[ "$(git log -1 --pretty=%B)" =~ \[[0-9]+\.[0-9]+\.[0-9]+(-[A-Za-z0-9]+)?\] ]]; then
+            echo "Version tag found in commit message."
+            echo "publish=true" >> $GITHUB_ENV
+          else
+            echo "No version tag found in commit message. Skipping publish."
+            echo "publish=false" >> $GITHUB_ENV
+          fi
+
+      - name: Stop if no version tag found
+        if: ${{ env.publish == 'false' }}
+        run: |
+          echo "No version tag found. Stopping the workflow."
+          exit 0
+
       - uses: actions/checkout@v4
         with:
           persist-credentials: false
@@ -63,19 +80,7 @@ jobs:
           name: python-package-distributions
           path: dist/
 
-      - name: Check commit message for version tag
-        id: check_version
-        run: |
-          if [[ "$(git log -1 --pretty=%B)" =~ \[[0-9]+\.[0-9]+\.[0-9]+(-[A-Za-z0-9]+)?\] ]]; then
-            echo "Version tag found in commit message."
-            echo "publish=true" >> $GITHUB_ENV
-          else
-            echo "No version tag found in commit message. Skipping publish."
-            echo "publish=false" >> $GITHUB_ENV
-          fi
-
       - name: pypi-publish
-        if: ${{ env.publish == 'true' }}
         uses: pypa/gh-action-pypi-publish@v1.12.3
         with:
           repository-url: https://test.pypi.org/legacy/
