--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -18,7 +18,8 @@ permissions:
   id-token: write
 
 jobs:
-  release-build:
+  check-commit-message:
+    name: Check commit message
     runs-on: ubuntu-latest
 
     steps:
@@ -33,12 +34,11 @@ jobs:
             echo "publish=false" >> $GITHUB_ENV
           fi
 
-      - name: Stop if no version tag found
-        if: ${{ env.publish == 'false' }}
-        run: |
-          echo "No version tag found. Stopping the workflow."
-          exit 0
+  release-build:
+    if: ${{ env.publish == 'true' }}
+    runs-on: ubuntu-latest
 
+    steps:
       - uses: actions/checkout@v4
         with:
           persist-credentials: false
@@ -64,6 +64,7 @@ jobs:
           path: dist/
 
   publish-to-pypi:
+    if: ${{ env.publish == 'true' }}
     name: Publish LiveApex to PyPI
     needs: release-build
     runs-on: ubuntu-latest
@@ -81,7 +82,6 @@ jobs:
           path: dist/
 
       - name: pypi-publish
-        if: ${{ env.publish == 'true' }}
         uses: pypa/gh-action-pypi-publish@v1.12.3
         with:
           repository-url: https://test.pypi.org/legacy/
