--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -23,6 +23,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout 
+        uses: actions/checkout@v4
+
       - name: Check commit message for version tag
         id: check_version
         run: |
