--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -31,10 +31,10 @@ jobs:
         run: |
           if [[ "$(git log -1 --pretty=%B)" =~ \[[0-9]+\.[0-9]+\.[0-9]+(-[A-Za-z0-9]+)?\] ]]; then
             echo "Version tag found in commit message."
-            echo "check_passed=true"  >> $GITHUB_STATE
+            echo "check_passed=true"  >> $GITHUB_ENV
           else
             echo "No version tag found in commit message. Skipping publish."
-            echo "check_passed=false"  >> $GITHUB_STATE
+            echo "check_passed=false"  >> $GITHUB_ENV
           fi
 
   release-build:
