--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,11 +22,8 @@ jobs:
     name: Check commit message
     runs-on: ubuntu-latest
 
-    outputs:
-      check_passed: ${{ steps.check_version.outputs.check_passed }}
-
     steps:
-      - name: Checkout 
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Check commit message for version tag
@@ -34,19 +31,23 @@ jobs:
         run: |
           if [[ "$(git log -1 --pretty=%B)" =~ \[[0-9]+\.[0-9]+\.[0-9]+(-[A-Za-z0-9]+)?\] ]]; then
             echo "Version tag found in commit message."
-            echo "check_passed=true" >> $GITHUB_OUTPUT
+            echo "check_passed=true" >> $GITHUB_ENV
+            echo "::set-output name=check_passed::true"
           else
             echo "No version tag found in commit message. Skipping publish."
-            echo "check_passed=false" >> $GITHUB_OUTPUT
-          fi
+            echo "check_passed=false" >> $GITHUB_ENV
+            echo "::set-output name=check_passed::false"
+
+    outputs:
+      check_passed: ${{ steps.check_version.outputs.check_passed }}
 
   release-build:
-    # if: ${{ needs.check-commit-message.outputs.check_passed == 'true' }}
+    name: Build Release
+    needs: check-commit-message
+    if: ${{ needs.check-commit-message.outputs.check_passed == 'true' }}
     runs-on: ubuntu-latest
 
     steps:
-      - run: echo "${{ needs.check-commit-message.outputs.check_passed }}"
-      
       - uses: actions/checkout@v4
         with:
           persist-credentials: false
@@ -56,14 +57,9 @@ jobs:
           python-version: "3.x"
 
       - name: Build release distributions
-        run: >-
-          python3 -m
-          pip install
-          build
-          --user
-
-      - name: Build Python 3
-        run: python3 -m build
+        run: |
+          python3 -m pip install build --user
+          python3 -m build
 
       - name: Store packages
         uses: actions/upload-artifact@v4
@@ -72,9 +68,9 @@ jobs:
           path: dist/
 
   publish-to-pypi:
-    if: ${{ needs.check-commit-message.outputs.check_passed == 'true' }}
-    name: Publish LiveApex to PyPI
+    name: Publish to PyPI
     needs: release-build
+    if: ${{ needs.check-commit-message.outputs.check_passed == 'true' }}
     runs-on: ubuntu-latest
     environment:
       name: test-pypi
@@ -89,7 +85,7 @@ jobs:
           name: python-package-distributions
           path: dist/
 
-      - name: pypi-publish
+      - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@v1.12.3
         with:
           repository-url: https://test.pypi.org/legacy/
