--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Check commit message for version tag
         id: check_version
         run: |
-          if [[ "$(git log -1 --pretty=%B)" =~ \[[0-9]+\.[0-9]+\.[0-9]+(-[A-Za-z0-9]+)?\] ]]; then
+          if [[ "$(git log -1 --pretty=%B)" =~ \[[vV]?[0-9]+\.[0-9]+\.[0-9]+(-[A-Za-z0-9]+)?\] ]]; then
             echo "Version tag found in commit message."
             echo "check_passed=true" >> $GITHUB_ENV
             echo "::set-output name=check_passed::true"
